# Rename to dev version
# This is dev version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "je_load_density_dev"
version = "0.0.76"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "Load & Stress Automation Freamework"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "locust",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/LoadDensity"
Documentation = "https://loaddensity.readthedocs.io/en/latest/"
Code = "https://github.com/Intergration-Automation-Testing/LoadDensity"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages]
find = { namespaces = false }

[project.optional-dependencies]
gui = ["PySide6==6.9.2", "qt-material"]