# Rename to stable version
# This is stable version
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "je_load_density"
version = "0.0.66"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "Load & Stress Automation Freamework"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "locust",
    "defusedxml>=0.7.1",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/LoadDensity"
Documentation = "https://loaddensity.readthedocs.io/en/latest/"
Code = "https://github.com/Intergration-Automation-Testing/LoadDensity"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages]
find = { namespaces = false }

[project.optional-dependencies]
gui = ["PySide6==6.11.0", "qt-material"]
websocket = ["websocket-client>=1.6"]
grpc = ["grpcio>=1.60", "protobuf>=4.25"]
mqtt = ["paho-mqtt>=2.0"]
prometheus = ["prometheus-client>=0.19"]
opentelemetry = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
]
metrics = [
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
]
faker = ["faker>=24.0"]
mcp = ["mcp>=1.0"]
all = [
    "PySide6==6.11.0", "qt-material",
    "websocket-client>=1.6",
    "grpcio>=1.60", "protobuf>=4.25",
    "paho-mqtt>=2.0",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "faker>=24.0",
    "mcp>=1.0",
]

[tool.bandit]
exclude_dirs = ["test", "tests", ".venv", "build", "dist"]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/*_test.py", "**/conftest.py"]